src/objects/Cirrus__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles related to specific &quot;Cirrus&quot; products.  Undeploy this article type to exclude these articles from search.</description>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Content to be displayed to the community members.</description>
        <inlineHelpText>Content to be displayed to the community members.</inlineHelpText>
        <label>Details</label>
        <length>60000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Cirrus</label>
    <pluralLabel>Cirrus</pluralLabel>
</CustomObject>